src/App.css
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap");

*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  position: relative;
  background-color: black;
  display: flex;
  flex-direction: column;
  width: 100vw;
  background: url(./components/background_IN.png);
  overflow-x: hidden;
}

svg {
  max-width: 30px;
  max-height: 30px;
}

@media (min-width: 290px) {
  h1 {
    color: #fffbfb;
    text-align: center;
    letter-spacing: 0.3rem;
    text-transform: capitalize;
    font-size: 2rem;
    padding: 1rem;
    padding-bottom: 5rem;
    background: url(./components/init_UNderline3.png);
    background-repeat: no-repeat;
    background-position: center;
    background-position-y: 5rem;
    overflow: visible;
  }

  h2 {
    color: #fffbfb;
  }

  div {
    color: #fffbfb;
  }

  /* APP MAIN */

  .app-board {
    position: relative;
    font-family: "Playfair Display SC", serif;
    background: url(./components/./IN_mobile_background_5.png);
    background-repeat: no-repeat;
    background-position-x: center;
    width: 100vw;
    height: 60rem;
    margin: auto;
    margin-top: 2rem;
    margin-bottom: 2rem;
    padding: 0rem 3rem;
  }

  .app-board h1 {
    margin: auto;
    margin-top: 1rem;
  }

  .fight {
    position: relative;
    left: 12vw;
    margin-bottom: 0.5rem;
    font-family: "Playfair Display SC", serif;
    display: block;
    height: 6rem;
    width: 6rem;
    font-size: 1.3rem;
    background-color: rgba(0, 0, 0, 0.6);
    border-radius: 100%;
    border: solid #c53131 2px;
    color: #c53131;
    letter-spacing: 2px;
    font-weight: bold;
    -webkit-appearance: none;
    text-transform: uppercase;
    cursor: pointer;
    transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
    padding: 0.5rem;
  }

  .fight:hover {
    transform: rotate(20deg) scale(1.2);
    background-color: black;
  }

  .round-tracker {
    display: flex;
    border: solid #c53131 2px;
    border-radius: 13px;
    align-items: center;
    flex-direction: column;
    background-color: rgba(0, 0, 0, 0.6);
    margin-left: 8rem;
    margin-top: -7rem;
    margin-bottom: 1rem;
  }

  .round-tracker h2 {
    letter-spacing: 0.2rem;
    margin: 0.5rem;
  }

  .round-actions {
    display: flex;
  }

  .round-action {
    font-family: "Playfair Display SC", serif;
    border: none;
    font-size: 1.15em;
    font-weight: bold;
    color: #b0aeba;
    background-color: #dcdcdc;
    display: inline-block;
    cursor: pointer;
    outline: none;
  }

  .round-tracker .decrement {
    margin-right: -1rem;
    padding-right: 2rem;
    padding-left: 1rem;
  }

  .round-tracker .increment {
    margin-left: -1rem;
    padding-left: 2rem;
    padding-right: 1rem;
  }

  .round-score {
    font-family: "Playfair Display SC", serif;
    z-index: 1;
    flex-grow: 1;
    text-align: center;
    font-size: 3rem;
    max-width: 5rem;
    max-height: 3.25rem;
    font-size: 1.5rem;
    padding: 1rem;
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 1);
    border-style: none;
    text-shadow: none;
    text-transform: uppercase;
    color: #fff;
    border: solid #c53131 2px;
    outline: none;
  }

  /* CHARACTER CELL */

  .character-cell {
    font-family: "Playfair Display SC", serif;
    display: flex;
    border: solid 2px #c53131;
    letter-spacing: 2px;
    background-color: rgba(255, 255, 255, 0.3);
    height: 4rem;
    max-width: 20rem;
    margin: auto;
  }

  .remove-player {
    z-index: 1;
    font-size: 1.15em;
    border: none;
    outline: none;
    color: red;
    cursor: pointer;
    background: none;
  }

  .character-cell h2 {
    font-size: 1.5rem;
    margin: -0.8rem 0 0rem 2rem;
    max-width: 5rem;
  }

  .initiative-display {
    font-family: "Playfair Display SC", serif;
    border: solid #c53131 2px;
    max-width: 3rem;
    min-width: 3rem;
    font-size: 1.6rem;
    color: #fffbfb;
    background-color: rgba(0, 0, 0, 0.6);
    padding: 0.3rem;
    border-radius: 13%;
    align-self: center;
    text-align: center;
    margin-left: auto;
    margin-right: 1rem;
  }

  .concentration {
    z-index: 2;
    display: flex;
    flex-direction: column;
    color: black;
    margin-left: auto;
    text-align: center;
  }

  .concentration_radio {
    height: 1rem;
    min-width: 1rem;
    border: solid 2px red;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .checkmark {
    width: calc(100%-6px);
    height: calc(100%-6px);
    background-color: red;
    display: none;
  }

  .concentration_radio input {
    display: none;
  }

  .concentration_radio:checked + .checkmark {
    display: inline-block;
  }

  .character-cell--active h2 {
    font-size: 1.5rem;
  }

  .character-cell--active {
    animation: glow 800ms ease-out infinite alternate;
    height: 4rem;
    border: solid;
  }

  @keyframes glow {
    0% {
      border-color: #c53131;
      box-shadow: 0 0 1px rgba(31, 211, 8, 0.5),
        inset 0 0 10px rgba(31, 211, 8, 0.5), 0 2px 0 #000;
    }
    100% {
      border-color: #c53131;
      box-shadow: 0 0 1px rgba(31, 211, 8, 0.8),
        inset 0 0 30px rgba(31, 211, 8, 0.8), 0 2px 0 #000;
    }
  }

  .type-icon {
    max-width: 0.3rem;
    max-height: 0.3rem;
    align-self: center;
    justify-self: center;
    padding: 0.6rem;
    margin: 2rem;
    margin-bottom: 3rem;
    margin-left: auto;
  }

  .cell_info {
    display: flex;
    margin-left: auto;
  }

  /* ADD CHARACTER FORMS */

  .add-character {
    display: flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: auto;
    justify-items: center;
    align-items: center;
  }

  .character-name-input {
    font-family: "Playfair Display SC", serif;
    flex-grow: 1;
    height: 3rem;
    width: 15rem;
    font-size: 1.3rem;
    margin-top: 2rem;
    padding: 10px;
    border-radius: 5px;
    background-color: rgba(255, 255, 255, 0.4);
    border-style: none;
    text-shadow: none;
    color: #fffbfb;
    letter-spacing: 2px;
    outline: none;
  }

  input[type="submit"] {
    flex-grow: 1;
    font-family: "Playfair Display SC", serif;
    display: block;
    max-height: 3rem;
    font-size: 1.32rem;
    margin: auto;
    background-color: rgba(0, 0, 0, 1);
    border-radius: 13px;
    border: solid #c53131 2px;
    color: #fffbfb;
    letter-spacing: 2px;
    font-weight: bold;
    text-shadow: none;
    text-transform: uppercase;
    cursor: pointer;
    align-content: center;
    justify-content: center;
    padding: 1rem;
    -webkit-appearance: none;
  }

  button,
  input[type="submit"] {
    outline: none;
    transition: background-color 0.2s ease, color 0.2s ease;
  }

  input[type="submit"]:hover {
    transform: scale(1.1);
    transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
  }

  input[type="text"]:focus {
    background-color: rgba(0, 0, 0, 0.4);
  }

  .init-input {
    display: flex;
    border: solid #c53131 2px;
    border-radius: 13px;
    padding: 0rem 2rem 1rem 2rem;
    align-items: center;
    width: 14rem;
    flex-direction: column;
    margin: 1.5rem;
    background-color: rgba(0, 0, 0, 0.6);
    margin-left: auto;
    margin-right: auto;
  }

  .init-input h2 {
    letter-spacing: 0.2rem;
    margin: 0.1rem;
  }

  .init-actions {
    display: flex;
    padding: 1rem;
  }

  .init-action {
    font-family: "Playfair Display SC", serif;
    border: none;
    font-size: 1.15em;
    font-weight: bold;
    color: #b0aeba;
    background-color: #dcdcdc;
    display: inline-block;
    padding: 20px 20px;
    cursor: pointer;
    outline: none;
  }

  .init-score {
    font-family: "Playfair Display SC", serif;
    flex-grow: 1;
    z-index: 1;
    text-align: center;
    font-size: 3rem;
    max-width: 5rem;
    min-height: 4.25rem;
    font-size: 1.5rem;
    padding: 10px;
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 1);
    border-style: none;
    text-shadow: none;
    text-transform: uppercase;
    color: #fff;
    border: solid #c53131 2px;
    outline: none;
  }

  .increment {
    background: #84d97c3d;
    border: solid #c53131 2px;
    border-radius: 10%;
    border-left: none;
  }

  .decrement {
    background: #ef535041;
    border: solid #c53131 2px;
    border-radius: 10%;
    border-right: none;
  }

  .increment:hover {
    background: #039600;
  }

  .decrement:hover {
    background: #980000;
  }

  .init-input .decrement {
    margin-right: -1rem;
    padding-right: 2rem;
    padding-left: 1rem;
  }

  .init-input .increment {
    margin-left: -1rem;
    padding-left: 2rem;
    padding-right: 1rem;
  }

  .round-tracker {
    text-align: center;
    border: none;
    background: rgba(0, 0, 0, 0);
  }

  .type-selector {
    flex-grow: 1;
    border: solid #c53131 2px;
    border-radius: 13px;
    color: #fffbfb;
    width: 14rem;
    text-align: center;
    margin: auto;
    background-color: rgba(0, 0, 0, 0.6);
    margin-bottom: 2rem;
  }

  .type-selector h2 {
    font-size: 2rem;
    margin: 0;
  }

  .type-selector label {
    font-size: 1rem;
  }

  .buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: 1.5rem;
  }
}

@media (min-width: 700px) {
  h1 {
    font-size: 3rem;
  }

  /* APP MAIN */

  .app-board {
    min-width: fit-content;
    min-height: 60rem;
    background-image: url(./components/INit_background_full.png);
    background-repeat: no-repeat;
    background-size: 80vw 120vh;
    overflow: hidden;
  }
  .app-board h1 {
    margin-top: 2rem;
  }

  .character-cell {
    min-width: 76vw;
    font-size: 1.2rem;
  }

  .fight {
    left: 2rem;
  }

  .character-cell h2 {
    margin: auto;
    display: inline-block;
    margin-left: 1rem;
    font-size: 2rem;
  }

  .cell_info {
    display: flex;
    margin-left: auto;
    min-width: 15vw;
  }

  .initiative-display {
    min-width: 5rem;
    font-size: 2rem;
    color: white;
    justify-content: space-between;
  }

  .round-tracker {
    position: absolute;
    right: 10rem;
    top: 14rem;
  }

  /* ADD CHARACTER FORMS */

  .add-character {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    justify-items: center;
    margin-left: 8rem;
    margin-right: 8rem;
    margin-top: 2rem;
  }

  .character-name-input {
    height: 3rem;
    width: 20rem;
    font-size: 1.5rem;
    margin: 0rem;
  }

  input[type="submit"] {
    margin-top: -3rem;
  }

  input[type="text"]:focus {
    background-color: rgba(0, 0, 0, 0.4);
  }

  .fight {
    height: 6rem;
    width: 6rem;
    font-size: 1.5rem;
    margin: -4rem auto 2rem 12rem;
    padding: 0.5rem;
  }

  .init-input {
    padding: 0rem 2rem 1rem 2rem;
    width: 12rem;
    margin: 0rem;
  }

  .init-score {
    font-size: 3rem;
    max-width: 5rem;
    min-height: 4.25rem;
    font-size: 1.5rem;
    padding: 10px;
  }

  .type-selector {
    width: 12rem;
    text-align: center;
    margin: 0rem;
  }

  .type-selector h2 {
    font-size: 2rem;
  }

  .buttons {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-gap: 0.3rem;
    padding: 0.5rem;
    justify-items: center;
    align-items: center;
    font-size: 1.5rem;
  }

  .type-icon {
    max-width: 2rem;
    max-height: 2rem;
    padding: 2rem;
  }
}

@media (min-width: 1100px) {
  .add-character {
    max-width: 50rem;
    margin-left: auto;
    margin-right: auto;
  }

  .round-tracker {
    right: 12rem;
  }
}

@supports (-webkit-touch-callout: none) {
  .fight {
    margin-left: 0rem;
  }
}

